Remove Slider With Newer Version

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "homepage": "https://github.com/hectahertz/react-native-color#readme",
   "dependencies": {
     "prop-types": "^15.6.0",
-    "react-native-slider": "github:eminsr/react-native-slider",
+    "react-native-gesture-handler": "1.6.1",
+    "react-native-range-slider-expo": "^1.4.3",
+    "react-native-svg": "12.1.0",
     "tinycolor2": "^1.4.1"
   },
   "peerDependencies": {
